y.output

state 0
	$accept: .doc $end 
	Content: .    (2)

	.  reduce 2 (src line 38)

	Content  goto 2
	doc  goto 1

state 1
	$accept:  doc.$end 

	$end  accept
	.  error


state 2
	doc:  Content.    (1)
	Content:  Content.Comment 
	Content:  Content.Literal 
	Content:  Content.Ident 
	Content:  Content.LoadStmt 
	Content:  Content.DefStmt 
	Content:  Content.ReturnStmt 

	commentInline  shift 9
	commentMultiline  shift 10
	identToken  shift 15
	boolLiteral  shift 14
	integerLiteral  shift 12
	floatLiteral  shift 13
	stringLiteral  shift 11
	defKeyword  shift 17
	loadKeyword  shift 16
	returnKeyword  shift 18
	.  reduce 1 (src line 36)

	Comment  goto 3
	Ident  goto 5
	Literal  goto 4
	LoadStmt  goto 6
	DefStmt  goto 7
	ReturnStmt  goto 8

state 3
	Content:  Content Comment.    (3)

	.  reduce 3 (src line 40)


state 4
	Content:  Content Literal.    (4)

	.  reduce 4 (src line 44)


state 5
	Content:  Content Ident.    (5)

	.  reduce 5 (src line 48)


state 6
	Content:  Content LoadStmt.    (6)

	.  reduce 6 (src line 52)


state 7
	Content:  Content DefStmt.    (7)

	.  reduce 7 (src line 56)


state 8
	Content:  Content ReturnStmt.    (8)

	.  reduce 8 (src line 60)


state 9
	Comment:  commentInline.    (9)

	.  reduce 9 (src line 68)


state 10
	Comment:  commentMultiline.    (10)

	.  reduce 10 (src line 70)


state 11
	Literal:  stringLiteral.    (12)

	.  reduce 12 (src line 78)


state 12
	Literal:  integerLiteral.    (13)

	.  reduce 13 (src line 82)


state 13
	Literal:  floatLiteral.    (14)

	.  reduce 14 (src line 85)


state 14
	Literal:  boolLiteral.    (15)

	.  reduce 15 (src line 88)


state 15
	Ident:  identToken.    (11)

	.  reduce 11 (src line 75)


state 16
	LoadStmt:  loadKeyword.'(' Arguments ')' 

	'('  shift 19
	.  error


state 17
	DefStmt:  defKeyword.Ident '(' Parameters ')' ':' 
	DefStmt:  defKeyword.Ident '(' ')' ':' 

	identToken  shift 15
	.  error

	Ident  goto 20

state 18
	ReturnStmt:  returnKeyword.    (30)

	.  reduce 30 (src line 123)


state 19
	LoadStmt:  loadKeyword '('.Arguments ')' 

	identToken  shift 15
	stringLiteral  shift 23
	.  error

	Ident  goto 24
	Arguments  goto 21
	Argument  goto 22

state 20
	DefStmt:  defKeyword Ident.'(' Parameters ')' ':' 
	DefStmt:  defKeyword Ident.'(' ')' ':' 

	'('  shift 25
	.  error


state 21
	LoadStmt:  loadKeyword '(' Arguments.')' 
	Arguments:  Arguments.Argument 

	identToken  shift 15
	stringLiteral  shift 23
	')'  shift 26
	.  error

	Ident  goto 24
	Argument  goto 27

state 22
	Arguments:  Argument.    (19)
	Arguments:  Argument.',' 

	','  shift 28
	.  reduce 19 (src line 101)


state 23
	Argument:  stringLiteral.    (17)

	.  reduce 17 (src line 97)


state 24
	Argument:  Ident.'=' stringLiteral 

	'='  shift 29
	.  error


state 25
	DefStmt:  defKeyword Ident '('.Parameters ')' ':' 
	DefStmt:  defKeyword Ident '('.')' ':' 

	identToken  shift 15
	')'  shift 31
	'*'  shift 34
	.  error

	Ident  goto 33
	Parameters  goto 30
	Parameter  goto 32

state 26
	LoadStmt:  loadKeyword '(' Arguments ')'.    (16)

	.  reduce 16 (src line 93)


state 27
	Arguments:  Arguments Argument.    (21)

	.  reduce 21 (src line 103)


state 28
	Arguments:  Argument ','.    (20)

	.  reduce 20 (src line 102)


state 29
	Argument:  Ident '='.stringLiteral 

	stringLiteral  shift 35
	.  error


state 30
	DefStmt:  defKeyword Ident '(' Parameters.')' ':' 
	Parameters:  Parameters.Parameter 

	identToken  shift 15
	')'  shift 36
	'*'  shift 34
	.  error

	Ident  goto 33
	Parameter  goto 37

state 31
	DefStmt:  defKeyword Ident '(' ')'.':' 

	':'  shift 38
	.  error


state 32
	Parameters:  Parameter.    (24)
	Parameters:  Parameter.',' 

	','  shift 39
	.  reduce 24 (src line 111)


state 33
	Parameter:  Ident.    (27)
	Parameter:  Ident.'=' Literal 

	'='  shift 40
	.  reduce 27 (src line 117)


state 34
	Parameter:  '*'.    (29)

	.  reduce 29 (src line 119)


state 35
	Argument:  Ident '=' stringLiteral.    (18)

	.  reduce 18 (src line 98)


state 36
	DefStmt:  defKeyword Ident '(' Parameters ')'.':' 

	':'  shift 41
	.  error


state 37
	Parameters:  Parameters Parameter.    (26)

	.  reduce 26 (src line 113)


state 38
	DefStmt:  defKeyword Ident '(' ')' ':'.    (23)

	.  reduce 23 (src line 107)


state 39
	Parameters:  Parameter ','.    (25)

	.  reduce 25 (src line 112)


state 40
	Parameter:  Ident '='.Literal 

	boolLiteral  shift 14
	integerLiteral  shift 12
	floatLiteral  shift 13
	stringLiteral  shift 11
	.  error

	Literal  goto 42

state 41
	DefStmt:  defKeyword Ident '(' Parameters ')' ':'.    (22)

	.  reduce 22 (src line 106)


state 42
	Parameter:  Ident '=' Literal.    (28)

	.  reduce 28 (src line 118)


24 terminals, 13 nonterminals
31 grammar rules, 43/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
62 working sets used
memory: parser 21/240000
5 extra closures
35 shift entries, 1 exceptions
19 goto entries
1 entries saved by goto default
Optimizer space used: output 54/240000
54 table entries, 0 zero
maximum spread: 24, maximum offset: 40
